# tool-tunnel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
docs/: architecture.md  next.md  plan.md  research.md
src/: config.rs  iroh_link.rs  local.rs  main.rs  remote.rs
tests/fixtures/: stdio_mcp.py
