[package]
name = "tool-tunnel"
version = "0.1.0"
edition = "2024"
description = "Local-first peer-to-peer tool tunneling over iroh."
license = "MIT"
readme = "README.md"

[[bin]]
name = "tool-tunnel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive", "env"] }
data-encoding = "2.9.0"
iroh = { version = "=1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
iroh-tickets = "=1.0.0-rc.0"
rmcp = { version = "1.6.0", features = ["client", "server", "transport-async-rw", "transport-child-process", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
map_clone = "warn"
inefficient_to_string = "warn"
str_to_string = "warn"
